2004-??-??	Michael Lauer		<mickey@Vanille.de>

	* Added command line option "-nocheck" to skip non-root and dhcp tests
	* Improved the speed reading the manufacturer list
	* GPS coordinates are now presented in the DMS (as opposed to decimal) format

2003-12-18	Michael Lauer		<mickey@Vanille.de>

	* Released as Version 1.0.2 (Development Snapshot)
	* Added automatic uploading of capture files to "The Capture Dump" site at
	  http://www.Vanille.de/projects/capturedump.spy
	* Initial reading of the manufacturer database happens now in background
	* Removed deprecated setMonitorMode() API ==> Use setMode( "monitor" ) now.
	  The monitor mode now tries to use the standard IW_MODE_MONITOR first. If that
	  doesn't work, it falls back to using the proprietary iwpriv commands

2003-11-30	Michael Lauer		<mickey@Vanille.de>

	* Released as Version 1.0.1 (Development Snapshot)
	* Fixed ARP decoding for wired networks.
	  Interestingly, 802.11 encapsulates these in IP packets, while wired ethernet just tags the type_of_protocol.
	* Added reading GPS data from a gps daemon.
	* Started preparations for utilizing Wellenreiter II in wired networks.
	* Implemented persistant configuration interface and retriggerable auto detection.
	* Added QCOP interface for talking to opie-networksettings.
	* Added parsing of DHCP packets and detecting DHCP servers.
	* Overhauled the configuration window and started with the customizable event system.
	* Added disabling the screensaver.
	* Added automatic opening and scrolling to the network tree if a new station appears.

2003-05-10	Michael Lauer		<mickey@Vanille.de>

	* Released as Version 1.0 (Stable)
	* Added restarting the dhcp client if having killed it before.
	* Decouple dump files from live capture to shift control over 'what' is dumped to applications.

2003-05-05	Michael Lauer		<mickey@Vanille.de>

	* Released as Version 1.0-RC1 (Release Candidate)
	* Fixed rare segfaults while sniffing and operating the GUI simultaenously.